--- a/package.json
+++ b/package.json
@@ -27,19 +27,33 @@
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint src/**/*.ts src/**/*.tsx",
+    "lint": "eslint src/**/*.ts src/**/*.tsx --max-warnings=0",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint"
+    "src/**/*.{ts,tsx}": [
+      "npm run lint"
     ]
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "max-params": [
+        "error",
+        3
+      ],
+      "curly": [
+        "error",
+        "all"
+      ],
+      "max-lines-per-function": [
+        "error",
+        300
+      ]
+    }
   },
   "browserslist": {
     "production": [
