--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "napoleonic-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Client for Napoleonic Uniformology",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.0",
@@ -13,6 +14,7 @@
     "cloudinary-react": "^1.8.1",
     "cra-template-typescript": "1.2.0",
     "graphql": "^16.6.0",
+    "husky": "^8.0.3",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,37 +25,19 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint src/**/*.ts src/**/*.tsx --max-warnings=0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "docker:serve": "serve -s /app",
+    "docker:up": "docker-compose --file docker-compose.prod.yml up --detach",
+    "docker:down": "docker-compose --file docker-compose.prod.yml down"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "npm run lint"
     ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "max-params": [
-        "error",
-        3
-      ],
-      "curly": [
-        "error",
-        "all"
-      ],
-      "max-lines-per-function": [
-        "error",
-        300
-      ]
-    }
   },
   "browserslist": {
     "production": [
@@ -73,7 +57,6 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "web-vitals": "^3.0.3"
   }
