Refactor reviews and images; add image meta data

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@cloudinary/react": "^1.8.1",
     "@cloudinary/url-gen": "^1.8.6",
     "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@mui/system": "^5.10.9",
-    "cloudinary-react": "^1.8.1",
+    "cloudinary": "^1.33.0",
     "cra-template-typescript": "1.2.0",
     "graphql": "^16.6.0",
     "husky": "^8.0.3",
