Add test cases for ItemCard

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,10 @@
 {
   "extends": ["react-app", "react-app/jest"],
   "rules": {
-    "max-params": ["error", 4],
     "curly": ["error", "all"],
-    "max-lines-per-function": ["error", 300]
+    "max-lines-per-function": ["error", 300],
+    "max-params": ["error", 4],
+    "testing-library/no-container": "off",
+    "testing-library/no-node-access": "off"
   }
 }
