--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.33.0",
     "cra-template-typescript": "1.2.0",
     "graphql": "^16.6.0",
+    "history": "^5.3.0",
     "husky": "^8.0.3",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
