--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
+  "endOfLine": "auto",
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
