--- a/package.json
+++ b/package.json
@@ -2,29 +2,16 @@
   "name": "napoleonic-client",
   "version": "1.0.0",
   "description": "Client for Napoleonic Uniformology",
+  "author": "Joel Brighton (joebri)",
   "private": true,
-  "dependencies": {
-    "@apollo/client": "^3.7.0",
-    "@cloudinary/react": "^1.8.1",
-    "@cloudinary/url-gen": "^1.8.6",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9",
-    "@mui/system": "^5.10.9",
-    "cloudinary": "^1.33.0",
-    "cra-template-typescript": "1.2.0",
-    "graphql": "^16.6.0",
-    "history": "^5.3.0",
-    "husky": "^8.0.3",
-    "lodash.debounce": "^4.0.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+  "license": "ISC",
+  "keywords": [],
+  "engines": {
+    "node": "18.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joebri/napoleonic-client.git"
   },
   "scripts": {
     "start:dev": "react-scripts start",
@@ -36,11 +23,6 @@
     "docker:serve": "serve -s /app",
     "docker:up": "docker-compose --file docker-compose.prod.yml up --detach",
     "docker:down": "docker-compose --file docker-compose.prod.yml down"
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "npm run lint"
-    ]
   },
   "browserslist": {
     "production": [
@@ -70,5 +52,28 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "web-vitals": "^3.0.3"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "@cloudinary/react": "^1.8.1",
+    "@cloudinary/url-gen": "^1.8.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.9",
+    "@mui/system": "^5.10.9",
+    "cloudinary": "^1.33.0",
+    "cra-template-typescript": "1.2.0",
+    "graphql": "^16.6.0",
+    "history": "^5.3.0",
+    "husky": "^8.0.3",
+    "lodash.debounce": "^4.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.8.4"
   }
 }
