--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@apollo/sandbox": "^1.0.3",
     "@cloudinary/react": "^1.8.1",
     "@cloudinary/url-gen": "^1.8.6",
     "@emotion/react": "^11.10.4",
