--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-router-dom": "^5.3.3",
     "jest-environment-jsdom": "^29.3.1",
     "jest-extended": "^3.2.3",
+    "jest-fetch-mock": "^3.0.3",
     "jest-html-reporter": "^3.7.0",
     "lint-staged": "^13.1.0",
     "ts-jest": "^29.0.5",
