--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REACT_APP_CLOUDINARY_NAME='ezenix'
+
+# Docker container
 REACT_APP_GRAPH_URL='http://localhost:4001/'
+# local 
+# REACT_APP_GRAPH_URL='http://localhost:4000/'
