--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ REACT_APP_CLOUDINARY_NAME='ezenix'
 REACT_APP_GRAPH_URL='http://localhost:4001/'
 # local 
 # REACT_APP_GRAPH_URL='http://localhost:4000/'
+
+REACT_APP_SENTRY_DSN='https://5b264e7f43b94f70817ae332884bb1bc@o4504602899251200.ingest.sentry.io/4504602995130369'
+REACT_APP_SENTRY_ENVIRONMENT='development'
