--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
     "@mui/system": "^5.10.9",
+    "@sentry/react": "^7.34.0",
+    "@sentry/tracing": "^7.34.0",
     "cloudinary": "^1.33.0",
     "cra-template-typescript": "1.2.0",
     "graphql": "^16.6.0",
