--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest-environment-jsdom": "^29.3.1",
     "jest-extended": "^3.2.3",
     "jest-fetch-mock": "^3.0.3",
@@ -77,6 +78,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4"
   }
