--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strict": true,
     "target": "es5"
   },
+  // "files": ["node_modules/@emotion/react/types/css-prop"],
   "include": ["src"],
   "exclude": ["src/**/*.test.ts"]
 }
