--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@mui/system": "^5.10.9",
     "@sentry/react": "^7.34.0",
     "@sentry/tracing": "^7.34.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "cloudinary": "^1.33.0",
     "cra-template-typescript": "1.2.0",
     "graphql": "^16.6.0",
