--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-router-dom": "^5.3.3",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-extended": "^3.2.4",
     "jest-fetch-mock": "^3.0.3",
@@ -62,7 +63,6 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.0",
     "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@mui/system": "^5.12.3",
@@ -81,6 +81,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "sass": "^1.64.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
