--- a/package.json
+++ b/package.json
@@ -37,53 +37,54 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.1",
-    "@types/lodash": "^4.14.194",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
+    "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.196",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-extended": "^3.2.4",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-extended": "^4.0.0",
     "jest-fetch-mock": "^3.0.3",
-    "jest-html-reporter": "^3.8.0",
-    "lint-staged": "^13.2.2",
-    "ts-jest": "^29.1.0",
+    "jest-html-reporter": "^3.10.1",
+    "lint-staged": "^13.2.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.4.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.13",
-    "@apollo/sandbox": "^2.4.0",
-    "@auth0/auth0-react": "^2.0.2",
+    "@apollo/client": "^3.7.17",
+    "@apollo/sandbox": "^2.5.0",
+    "@auth0/auth0-react": "^2.2.0",
     "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.10.0",
-    "@emotion/react": "^11.10.8",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
-    "@mui/system": "^5.12.3",
-    "@sentry/react": "^7.50.0",
-    "@sentry/tracing": "^7.50.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "cloudinary": "^1.36.4",
+    "@cloudinary/url-gen": "^1.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
+    "@mui/system": "^5.14.1",
+    "@sentry/react": "^7.60.1",
+    "@sentry/tracing": "^7.60.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "cloudinary": "^1.39.0",
     "cra-template-typescript": "1.2.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.7.1",
     "history": "^5.3.0",
     "husky": "^8.0.3",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.11.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "sass": "^1.64.1",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6"
   },
   "overrides": {
     "react-scripts": {
