--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,5 @@
 {
-    "extends": [
-        "react-app",
-        "react-app/jest",
-        "plugin:react-hooks/recommended"
-    ],
+    "extends": ["react-app", "plugin:react-hooks/recommended"],
     "rules": {
         "curly": ["error", "all"],
         "max-lines-per-function": ["error", 300],
