--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "license": "ISC",
     "keywords": [],
     "engines": {
-        "node": "18.11.0"
+        "node": "20.14.0"
     },
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/joebri/napoleonic-client.git"
     },
     "scripts": {
-        "start:dev": "react-scripts start",
-        "build": "react-scripts build",
-        "test:dev": "react-scripts test",
-        "test": "jest",
+        "start:dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:cov": "vitest run --coverage",
         "lint": "eslint src/**/*.ts src/**/*.tsx --max-warnings=0",
         "prepare": "husky install",
         "docker:serve": "serve -s /app",
@@ -37,24 +40,24 @@
         ]
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/jest-dom": "^6.4.6",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
-        "@types/jest": "^29.5.12",
         "@types/lodash": "^4.17.4",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-router-dom": "^5.3.3",
+        "@vitest/coverage-v8": "^1.6.0",
+        "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-react-hooks": "^4.6.2",
         "identity-obj-proxy": "^3.0.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jest-extended": "^4.0.2",
-        "jest-fetch-mock": "^3.0.3",
-        "jest-html-reporter": "^3.10.2",
+        "jsdom": "^24.1.0",
         "lint-staged": "^15.2.5",
-        "react-scripts": "5.0.1",
-        "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
+        "vite": "^5.2.13",
+        "vite-plugin-eslint": "^1.8.1",
+        "vite-tsconfig-paths": "^4.3.2",
+        "vitest": "^1.6.0",
         "web-vitals": "^4.0.1"
     },
     "dependencies": {
@@ -69,7 +72,9 @@
         "@sentry/browser": "^8.7.0",
         "@sentry/react": "^8.7.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@vitejs/plugin-react": "^4.3.0",
         "cra-template-typescript": "1.2.0",
+        "dotenv": "^16.4.5",
         "graphql": "^16.8.1",
         "history": "^5.3.0",
         "husky": "^9.0.11",
@@ -83,9 +88,5 @@
         "tslib": "^2.6.2",
         "typescript": "^5.4.5"
     },
-    "overrides": {
-        "react-scripts": {
-            "typescript": "^5"
-        }
-    }
+    "overrides": {}
 }
