--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "target": "esnext",
+        "types": ["vite/client"],
+
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "baseUrl": "src",
@@ -14,8 +17,7 @@
         "noFallthroughCasesInSwitch": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "strict": true,
-        "target": "es5"
+        "strict": true
     },
     // "files": ["node_modules/@emotion/react/types/css-prop"],
     "include": ["src"],
