Update to Vite; fix import sort; refactor Helmet useage; update tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,6 @@
         "max-lines-per-function": ["error", 300],
         "max-params": ["error", 4],
         "testing-library/no-container": "off",
-        "testing-library/no-node-access": "off"
-    }
+        "testing-library/no-node-access": "off",
+    },
 }
